add CO2 finished

--- a/css/slider.css
+++ b/css/slider.css
@@ -28,7 +28,7 @@
   appearance: none;
   width: 25px; /* Set a specific slider handle width */
   height: 25px; /* Slider handle height */
-  background: #DF2700; /* Green background */
+  background: #000000; /* Green background */
   cursor: pointer; /* Cursor on hover */
 }
 
